examples/envoy-gateway-demo/00-gatewayclass.yaml
---
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: envoy
spec:
  controllerName: envoyproxy.io/gateway-controller
---
