examples/envoy-gateway-demo/03-httproute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: echo-routes
  namespace: default
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-gateway-1
  hostnames:
  - "gateway.envoyproxy.io"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /s1
    backendRefs:
    - kind: Service
      name: s1
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /s2
    backendRefs:
    - kind: Service
      name: s2
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - kind: Service
      name: s3
      port: 80
